Feat: update lead

--- a/templates/leads/lead_detail.html
+++ b/templates/leads/lead_detail.html
@@ -19,6 +19,8 @@
         <p>Name: <strong>{{ lead.first_name }} {{ lead.last_name }}</strong></p>
         <p>Age: {{ lead.age }}</p>
         <p>Agent email: {{ lead.agent }}</p>
+        <hr>
+        <a href="{% url 'leads:lead_update' lead.id %}">Update</a>
     </div>
 </body>
 </html>
