--- a/templates/leads/lead_detail.html
+++ b/templates/leads/lead_detail.html
@@ -1,12 +1,34 @@
 {% extends '_base.html' %}
 
 {% block content %}
-    <div class="lead">
-        <p>Name: <strong>{{ lead.first_name }} {{ lead.last_name }}</strong></p>
-        <p>Age: {{ lead.age }}</p>
-        <p>Agent email: {{ lead.agent }}</p>
-        <hr>
-        <a href="{% url 'leads:lead_update' lead.id %}">Update</a> |
-        <a href="{% url 'leads:lead_delete' lead.id %}">Delete</a>
-    </div>
+    <section class="text-gray-600 body-font overflow-hidden">
+        <div class="container px-5 pt-16 mx-auto">
+            <div class="lg:w-4/5 mx-auto flex flex-wrap">
+                <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+                    <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
+                    <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ lead.first_name }} {{ lead.last_name }}</h1>
+                    <div class="flex mb-4">
+                        <a href="{% url 'leads:lead_detail' lead.id %}" class="flex-grow text-green-500 border-b-2 border-green-500 py-2 text-lg px-1">Details</a>
+                        <a href="{% url 'leads:lead_update' lead.id %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Update</a>
+                    </div>
+                    <p class="leading-relaxed mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quos!</p>
+                    <div class="flex border-t border-gray-200 py-2">
+                        <span class="text-gray-500">Age</span>
+                        <span class="ml-auto text-gray-900">{{ lead.age }}</span>
+                    </div>
+                    <div class="flex border-t border-gray-200 py-2">
+                        <span class="text-gray-500">Phone number</span>
+                        <span class="ml-auto text-gray-900">+1 228-228-221</span>
+                    </div>
+                    <div class="flex border-t border-b mb-6 border-gray-200 py-2">
+                        <span class="text-gray-500">Agent email</span>
+                        <span class="ml-auto text-gray-900">{{ lead.agent }}</span>
+                    </div>
+                    <div class="flex">
+                        <a href="{% url 'leads:lead_delete' lead.id %}" class="flex mr-auto text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock content %}
