--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -1,11 +1,37 @@
 {% extends '_base.html' %}
 
 {% block content %}
-    <a href="{% url 'leads:lead_create' %}">Create a new lead</a>
-    <hr>
-    {% for lead in leads %}
-        <div class="lead">
-            <a href="{% url 'leads:lead_detail' lead.pk %}">{{ lead.first_name }} {{ lead.last_name }}</a>. Age: {{ lead.age }}
+    <section class="text-gray-600 body-font">
+        <div class="container px-5 py-24 mx-auto flex flex-wrap">
+            <div class="w-full py-6 mb-6 flex justify-between items-center border-b border-gray-400">
+                <div>
+                    <h1 class="text-4xl text-gray-800">Leads</h1>
+                </div>
+                <div>
+                    <a href="{% url 'leads:lead_create' %}" class="text-gray-600 hover:text-green-500">Create a new lead</a>
+                </div>
+            </div>
+            <div class="flex flex-wrap -m-4">
+                {% for lead in leads %}
+                    <div class="p-4 lg:w-1/2 md:w-full">
+                        <div class="flex border-2 rounded-lg border-gray-200 border-opacity-50 p-8 sm:flex-row flex-col">
+                        <div class="flex-grow">
+                            <h2 class="text-gray-900 text-lg title-font font-medium mb-3">
+                                {{ lead.first_name }} {{ lead.last_name }}
+                            </h2>
+                            <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
+                            <a href="{% url 'leads:lead_detail' lead.id %}" class="mt-3 text-green-500 inline-flex items-center">View Details
+                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
+                                    <path d="M5 12h14M12 5l7 7-7 7"></path>
+                                </svg>
+                            </a>
+                         </div>
+                    </div>
+                    </div>
+                {% endfor %}
+            </div>
         </div>
-    {% endfor %}
+    </section>
 {% endblock content %}
+
+
