--- a/templates/leads/lead_update.html
+++ b/templates/leads/lead_update.html
@@ -1,10 +1,27 @@
 {% extends '_base.html' %}
 
 {% block content %}
-    <h3>Update lead: {{ lead.first_name }} {{ lead.last_name }}</h3>
     <form action="{% url 'leads:lead_update' lead.id %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Update Lead">
+        <section class="text-gray-600 body-font overflow-hidden">
+            <div class="container px-5 pt-16 mx-auto">
+                <div class="lg:w-4/5 mx-auto flex flex-wrap">
+                    <div class="lg:w-1/2 w-full lg:pr-10 lg:py-6 mb-6 lg:mb-0">
+                    <h2 class="text-sm title-font text-gray-500 tracking-widest">LEAD</h2>
+                    <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ lead.first_name }} {{ lead.last_name }}</h1>
+                    <div class="flex mb-4">
+                        <a href="{% url 'leads:lead_detail' lead.id %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Details</a>
+                        <a href="{% url 'leads:lead_update' lead.id %}" class="flex-grow text-green-500 border-b-2 border-green-500 py-2 text-lg px-1">Update</a>
+                    </div>
+                    {{ form.as_p }}
+                    <div class="flex mt-2">
+                        <button type="submit" class="flex mr-auto text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded">Update Lead</button>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </section>
     </form>
+
+
 {% endblock content %}
