--- a/templates/_base.html
+++ b/templates/_base.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,6 +7,14 @@
     <title>DJANGO CRM</title>
     {# Tailwind CSS #}
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+    {# Favicon icon #}
+    <link rel="apple-touch-icon" sizes="512x512" href="{% static 'images/favicon_icons/android-chrome-192x192.png' %}">
+    <link rel="apple-touch-icon" sizes="192x192" href="{% static 'images/favicon_icons/android-chrome-512x512.png' %}">
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon_icons/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon_icons/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon_icons/favicon-16x16.png' %}">
+    {# Custom CSS #}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
     <div class="max-w-6xl mx-auto">
