--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,10 +1,10 @@
+{% load static %}
+
 <header class="text-gray-600 body-font">
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-green-500 rounded-full" viewBox="0 0 24 24">
-        <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-      </svg>
-      <a href="{% url 'landing_page' %}" class="ml-3 text-xl cursor-pointer hover:text-green-500">DJANGO CRM</a>
+      <img src="{% static 'images/logo.svg' %}" alt="DJANGO CRM" class="logo">
+      <a href="{% url 'landing_page' %}" class="ml-3 text-xl cursor-pointer hover:text-green-500 font-bold">DJANGO CRM</a>
     </a>
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
       <a href="{% url 'leads:lead_list' %}" class="mr-5 hover:text-green-500 cursor-pointer">Leads</a>
