--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -4,7 +4,7 @@
   <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
     <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
       <img src="{% static 'images/logo.svg' %}" alt="DJANGO CRM" class="logo">
-      <a href="{% url 'landing_page' %}" class="ml-3 text-xl cursor-pointer hover:text-green-500 font-bold">DJANGO CRM</a>
+      <a href="{% url 'pages:landing_page' %}" class="ml-3 text-xl cursor-pointer hover:text-green-500 font-bold">DJANGO CRM</a>
     </a>
 
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
