--- a/templates/agents/agent_list.html
+++ b/templates/agents/agent_list.html
@@ -8,7 +8,7 @@
                     <h1 class="text-4xl text-gray-800">Agents</h1>
                 </div>
                 <div>
-                    <a href="#" class="text-gray-600 hover:text-green-500">Create a new agent</a>
+                    <a href="{% url 'agents:agent_create' %}" class="text-gray-600 hover:text-green-500">Create a new agent</a>
                 </div>
             </div>
             <div class="flex flex-wrap -m-4">
