--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,8 +8,9 @@
     </a>
 
     <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-      <a href="{% url 'leads:lead_list' %}" class="mr-5 hover:text-green-500 cursor-pointer">Leads</a>
       {% if request.user.is_authenticated %}
+        <a href="{% url 'agents:agent_list' %}" class="mr-5 hover:text-green-500 cursor-pointer">Agents</a>
+        <a href="{% url 'leads:lead_list' %}" class="mr-5 hover:text-green-500 cursor-pointer">Leads</a>
         <a href="{% url 'logout' %}" class="mr-5 hover:text-green-500 cursor-pointer">Logged in: <span class="font-bold text-green-500">{{ request.user.username }}</span></a>
       {% else %}
         <a href="{% url 'signup' %}" class="mr-5 hover:text-green-500 cursor-pointer">Sign Up</a>
