--- a/templates/agents/agent_list.html
+++ b/templates/agents/agent_list.html
@@ -20,7 +20,7 @@
                                 {{ agent.user.username }}
                             </h2>
                             <p class="leading-relaxed text-base">Blue bottle crucifix vinyl post-ironic four dollar toast vegan taxidermy. Gastropub indxgo juice poutine.</p>
-                            <a href="#" class="mt-3 text-green-500 inline-flex items-center">View Details
+                            <a href="{% url 'agents:agent_detail' agent.id %}" class="mt-3 text-green-500 inline-flex items-center">View Details
                                 <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-2" viewBox="0 0 24 24">
                                     <path d="M5 12h14M12 5l7 7-7 7"></path>
                                 </svg>
