Feat: update agent

--- a/templates/agents/agent_detail.html
+++ b/templates/agents/agent_detail.html
@@ -9,7 +9,7 @@
                     <h1 class="text-gray-900 text-3xl title-font font-medium mb-4">{{ agent.user.username }}</h1>
                     <div class="flex mb-4">
                         <a href="{% url 'agents:agent_detail' agent.id %}" class="flex-grow text-green-500 border-b-2 border-green-500 py-2 text-lg px-1">Details</a>
-                        <a href="#" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Update</a>
+                        <a href="{% url 'agents:agent_update' agent.id %}" class="flex-grow border-b-2 border-gray-300 py-2 text-lg px-1">Update</a>
                     </div>
                     <p class="leading-relaxed mb-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quos!</p>
                     <div class="flex border-t border-gray-200 py-2">
