--- a/templates/agents/agent_detail.html
+++ b/templates/agents/agent_detail.html
@@ -17,7 +17,7 @@
                         <span class="ml-auto text-gray-900">{{ agent.organization }}</span>
                     </div>
                     <div class="flex">
-                        <a href="#" class="flex mr-auto text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded">Delete</a>
+                        <a href="{% url 'agents:agent_delete' agent.id %}" class="flex mr-auto text-white bg-green-500 border-0 py-2 px-6 focus:outline-none hover:bg-green-600 rounded">Delete</a>
                     </div>
                 </div>
             </div>
